--- a/matrix-admin/src/main/webapp/css/style.default.css
+++ b/matrix-admin/src/main/webapp/css/style.default.css
@@ -999,6 +999,11 @@ form input[type=text] {
 	border-radius: 2px; background: #fcfcfc; vertical-align: middle; -moz-box-shadow: inset 0 1px 3px #ddd; 
 	-webkit-box-shadow: inset 0 1px 3px #ddd; box-shadow: inset 0 1px 3px #ddd; color: #666;
 }
+form input[type=password] { 
+	padding: 8px 5px; border: 1px solid #ccc; width: 85%; -moz-border-radius: 2px; -webkit-border-radius: 2px; 
+	border-radius: 2px; background: #fcfcfc; vertical-align: middle; -moz-box-shadow: inset 0 1px 3px #ddd; 
+	-webkit-box-shadow: inset 0 1px 3px #ddd; box-shadow: inset 0 1px 3px #ddd; color: #666;
+}
 form input:focus { 
 	background: #fff; -moz-box-shadow: inset 1px 1px 2px #eee; -webkit-box-shadow: inset 1px 1px 2px #eee; box-shadow: inset 1px 1px 2px #eee;
 }
@@ -1021,8 +1026,16 @@ form input[type=reset] {
 }
 form input[type=reset]:hover { background: #ddd; cursor: pointer; color: #333; }
 form select { 
-	border: 1px solid #ccc; padding: 5px 2px; min-width: 40%; background: #fcfcfc; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; 
-	-moz-box-shadow: inset 1px 1px 2px #ddd; -webkit-box-shadow: inset 1px 1px 2px #ddd; box-shadow: inset 1px 1px 2px #ddd; color: #666;
+	border: 1px solid #ccc; 
+	padding: 8px 5px; 
+	min-width: 40%; 
+	background: #fcfcfc; 
+	-moz-border-radius: 2px; 
+	-webkit-border-radius: 2px; 
+	border-radius: 2px; 
+	-moz-box-shadow: inset 1px 1px 2px #ddd; 
+	-webkit-box-shadow: inset 1px 1px 2px #ddd; 
+	box-shadow: inset 1px 1px 2px #ddd; color: #666;
 }
 form textarea:focus, form select:focus { 
 	background: #fff; -moz-box-shadow: inset 1px 1px 2px #eee; -webkit-box-shadow: inset 1px 1px 2px #eee; box-shadow: inset 1px 1px 2px #eee; 
@@ -2662,7 +2675,10 @@ blockquote.bq2 {
 	box-shadow: 0 1px 0 #ddd; 
 }
 
-
+/* add or edit form's input lable  */
+.ae-form-input {
+	max-width: 30%
+}
 
 
 
