--- a/matrix-admin/src/main/webapp/css/style.default.css
+++ b/matrix-admin/src/main/webapp/css/style.default.css
@@ -550,13 +550,18 @@ body.withmenucoll2 { background-position: 35px 0; } /* with menu style 2 in coll
 /*************************************/
 
 
-.centercontent { margin-left: 231px; position: relative; }
+.centercontent { 
+	/* margin-left: 231px;  iframe不需要此属性 */
+	position: relative; 
+}
 .centercontent .pagetitle { margin: 0 20px 10px 20px; }
 .centercontent .pagedesc { margin: 0 20px; }
 .centercontent .hornav { padding: 0 20px; }
 
 .withmenucoll .centercontent { margin-left: 56px; }
-.withmenucoll2 .centercontent { margin-left: 36px; }
+.withmenucoll2 .centercontent { 
+	/* margin-left: 36px;  iframe不需要此属性 */  
+	}
 
 
 /***** 12. MAIN CONTENT STYLES *****/
@@ -875,7 +880,10 @@ input.hasDatepicker {
 .stdtable .con1 { background: #fcfcfc; }
 .stdtable th, .stdtable td { line-height: 21px; vertical-align: middle; color: #333; }
 .stdtable thead th, .stdtable thead td { 
-	padding: 7px 10px; border: 1px solid #ddd; border-left: 0; 
+	padding: 7px 10px; 
+	border: 1px solid #ddd; 
+	border-left: 0; 
+	font-size: 12px;
 	/*text-align: left; */
 }
 .stdtable tfoot th, .stdtable tfoot td { padding: 7px 10px; border-right: 1px solid #ddd; border-bottom: 1px solid #ddd; text-align: left; }
@@ -890,9 +898,9 @@ input.hasDatepicker {
 .stdtable thead th.sorting_desc, .stdtable thead td.sorting_desc  { 
 	background-image: url(../images/sort_desc.png); background-repeat: no-repeat; background-position: right 9px; }
 .stdtable thead th.nosort { background-image: none !important; }
-.stdtable thead td { font-weight: bold; }
+.stdtable thead td { font-weight: bold; font-size: 12px;}
 .stdtable thead td.center { text-align: center; }
-.stdtable tbody tr td { padding: 8px 10px; border-right: 1px solid #eee; border-bottom: 1px solid #eee; color: #666; }
+.stdtable tbody tr td {font-size:13px;  padding: 8px 10px; border-right: 1px solid #eee; border-bottom: 1px solid #eee; color: #666; }
 .stdtable tbody tr:last-child td { border-bottom: 1px solid #ddd; }
 .stdtable tbody tr td:first-child { border-left: 1px solid #ddd; }
 .stdtable tbody tr td:last-child { border-right: 1px solid #ddd; }
