--- a/matrix-admin/src/main/webapp/css/style.default.css
+++ b/matrix-admin/src/main/webapp/css/style.default.css
@@ -579,7 +579,13 @@ body.withmenucoll2 { background-position: 35px 0; } /* with menu style 2 in coll
 }
 .contenttitle h4 { padding: 12px 10px; font-size: 14px; }
 
-.contenttitle2 { margin: 20px 0; border-bottom: 2px solid #FB9337; padding-bottom: 5px; padding-right: 20px; display: inline-block; }
+.contenttitle2 { 
+	margin: 20px 0; 
+	/* border-bottom: 2px solid #FB9337; */     /* 舍弃这条线 */
+	padding-bottom: 5px; 
+	padding-right: 20px; 
+	display: inline-block; 
+}
 .contenttitle2 h3 { font-size: 16px; font-weight: normal;  }
 
 
