--- a/matrix-admin/src/main/webapp/css/style.default.css
+++ b/matrix-admin/src/main/webapp/css/style.default.css
@@ -34,7 +34,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	border: 0;
 	margin: 0;
 	padding: 0;
-	vertical-align: baseline;
+	/* vertical-align: baseline; */
 }
 
 /***** 2. GENERAL STYLES *****/
